# MCP_Masterclass

./: README.md  package.json  pyproject.toml
CH-1_CreateMCP/: 1_first_mcpserver_stdio.py  2_python_client.py  3_langchain_client.py
CH-2_HTTP_MCP/: 1_http_mcp.py  2_langchain_client.py
CH-3_3rdParty_MCPs/: community_mcp.py  tavily_mcp.py
CH-4_PyPI_MCP/: 1_test_package.py  2_client.py
CH-6_MCP_Docker/: Dockerfile  requirements.txt
MCP_PYPI/: pyproject.toml
MCP_PYPI/src/agentic_terminal/: main.py  tools.py
