[project]
name = "mcp-masterclass"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agentic-terminal>=0.1.0",
    "fastmcp>=3.2.4",
    "langchain>=1.2.17",
    "langchain-mcp-adapters>=0.2.2",
    "mcp>=1.27.0",
]




